# pure-test

./: default.nix  pure-test.cabal
src/Pure/: Test.hs
src/Pure/Test/: Pretty.hs
