name:                pure-test
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-test
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    deepseq,
    directory,
    unordered-containers,
    hashable, 
    mtl,
    stm,
    async,
    pure-random-pcg,
    pure-spacetime

  exposed-modules:
    Pure.Test

  hs-source-dirs: src

  default-language: Haskell2010