name:                pure-test
version:             0.8.0.0
homepage:            purehs.org/doc/pure-test
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-test.git

library
  build-depends:
    base,
    deepseq,
    directory,
    unordered-containers,
    hashable, 
    mtl,
    stm,
    async,
    pure-random-pcg,
    pure-spacetime,
    pure-txt,
    pure-lifted

  exposed-modules:
    Pure.Test
    Pure.Test.Pretty

  hs-source-dirs: src

  default-language: Haskell2010
